    * added wikiutil.MimeType class (works internally with sanitized mime
      types because the official ones suck)
    * renamed parsers to module names representing sane mimetypes, e.g.:
      parser.wiki -> parser.text_moin_wiki
    * Added thread_monitor. It can be activated using:
      from MoinMoin.util import thread_monitor; thread_monitor.activate_hook()
    * Introduced scope parameter to CacheEntry() - if you specify 'farm', it
      will cache into a common directory for all wikis in the same farm, if you
      specify 'wiki', it will use a cache directory per wiki and if you specify
      'item', it will use a cache directory per item (== per page).
      Creating a CacheEntry without explicit scope is DEPRECATED.
    * smileys moved from MoinMoin.config to MoinMoin.theme
    * removed all _ magic in URLs and filenames
      TODO: write mig script for data_dir
      TODO: make blanks in interwiki pagelinks possible

  New Features:
    * Removed "underscore in URL" == "blank in pagename magic" - it made more
      trouble than it was worth. If you still want to have a _ in URL, just
      put a _ into pagename.
    * Introduced quoting for pagenames and new, easier link markup:
      * ["Page with blanks" but different link text],
        NOTE: using [:Page with blanks:but different link text] is DEPRECATED.
      * ["/Sub Page" with different link text]
      * MoinMoin:"Page with blanks"
      * [wiki:MoinMoin:"Page with blanks" different link text]
      * attachment:"blanks are evil.txt"

    * FeatureRequests/WikiEmailIntegration TODO:make some help page when stable
    * HTML parser (called "html") that allows you to use HTML on the page.
      Thanks to the trac team for the nice code.
    * You can have a common cache_dir for your farm (will save a bit space
      and cpu time as it shares some stuff).
      You need to set "cache_dir = '/some/farm/cachedir' in your farmconfig.